[gd_scene load_steps=10 format=3 uid="uid://cma31337mqy13"]

[ext_resource type="Theme" uid="uid://c2lumoijk82ik" path="res://assets/themes/menu.tres" id="1_oawy5"]
[ext_resource type="Script" path="res://scenes/UI/menu.gd" id="1_vyayb"]
[ext_resource type="Texture2D" uid="uid://h3lrngtkh1sb" path="res://assets/sprites/UI/Title/cover-1.jpg" id="3_gb30e"]
[ext_resource type="PackedScene" uid="uid://ciboe7sdibtc3" path="res://scenes/world/main_start/shake_camera.tscn" id="3_tc8qs"]
[ext_resource type="Texture2D" uid="uid://c64txwxraypwi" path="res://assets/sprites/UI/Containers/menu.png" id="4_xnclv"]
[ext_resource type="PackedScene" uid="uid://pjr0tdqacf2g" path="res://scenes/UI/options_menu.tscn" id="6_x258p"]

[sub_resource type="Animation" id="Animation_yvalh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xinvh"]
resource_name = "fade_in_white"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mj4cb"]
_data = {
"RESET": SubResource("Animation_yvalh"),
"fade_in_white": SubResource("Animation_xinvh")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oawy5")
script = ExtResource("1_vyayb")

[node name="ShakeCamera" parent="." instance=ExtResource("3_tc8qs")]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 481.0
offset_bottom = 271.0
texture = ExtResource("3_gb30e")
expand_mode = 1

[node name="Lob" type="Label" parent="."]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
offset_left = 1.0
offset_right = 171.0
offset_bottom = 83.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "LOB"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 52.0
offset_right = -238.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("4_xnclv")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect2"]
layout_mode = 2
offset_left = 46.0
offset_top = 76.0
offset_right = 199.0
offset_bottom = 165.0
theme_override_constants/separation = 7

[node name="Play" type="Button" parent="MarginContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Levels" type="Button" parent="MarginContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Levels"

[node name="Option" type="Button" parent="MarginContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Exit" type="Button" parent="MarginContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Options_Menu" parent="." instance=ExtResource("6_x258p")]
visible = false
layout_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -20.0
offset_top = -15.0
offset_right = 499.0
offset_bottom = 290.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mj4cb")
}

[connection signal="pressed" from="MarginContainer/TextureRect2/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect2/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect2/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
